src/objects/Surgical_Note_Implant__c.object
<CustomObject>
    <fields>
        <fullName>Abutment_Collar_Height__c</fullName>
        <label>Abutment Collar Height</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abutment_Straight__c</fullName>
        <label>Abutment Straight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>Straight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abutment_Width__c</fullName>
        <label>Abutment Width</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bone_Density__c</fullName>
        <label>Bone Density</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buried_Implant__c</fullName>
        <label>Buried Implant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Screw_Placed__c</fullName>
        <label>Closure Screw Placed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Notes_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversion Notes Form</label>
        <referenceTo>Conversion_Notes_Form__c</referenceTo>
        <relationshipLabel>Surgical Note Implants</relationshipLabel>
        <relationshipName>Surgical_Note_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Torque_Value__c</fullName>
        <label>Conversion Torque Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Failure_Observed__c</fullName>
        <label>Date Failure Observed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Notes_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Notes Form</label>
        <referenceTo>Final_Notes_Form__c</referenceTo>
        <relationshipLabel>Surgical Note Implants</relationshipLabel>
        <relationshipName>Surgical_Note_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Ostell_ISQ__c</fullName>
        <label>Final Ostell ISQ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Healing_Cap_Placed__c</fullName>
        <label>Healing Cap Placed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Length__c</fullName>
        <label>Implant Length</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_System_Other__c</fullName>
        <label>Implant System Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_System_Value__c</fullName>
        <formula>TEXT(Surgical_Notes_Form__r.Implant_System__c)</formula>
        <label>Implant System Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_System__c</fullName>
        <label>Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Torque_Number__c</fullName>
        <label>Implant Torque Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_Torque_Value__c</fullName>
        <label>Implant Torque Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holder Value</fullName>
                </value>
                <value>
                    <fullName>15 Ncm</fullName>
                </value>
                <value>
                    <fullName>20 Ncm</fullName>
                </value>
                <value>
                    <fullName>30 Ncm</fullName>
                </value>
                <value>
                    <fullName>35 Ncm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Type__c</fullName>
        <label>Implant Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Width__c</fullName>
        <label>Implant Width</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JIG_Notes_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JIG Notes Form</label>
        <referenceTo>JIG_Notes_Form__c</referenceTo>
        <relationshipLabel>Surgical Note Implants</relationshipLabel>
        <relationshipName>Surgical_Note_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JIG_Ostell_ISQ__c</fullName>
        <label>JIG Ostell ISQ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numerical_Name__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ostel__c</fullName>
        <label>Conversion Ostell ISQ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redo_Surgery_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redo Surgery Form</label>
        <referenceTo>Redo_Surgery_Form__c</referenceTo>
        <relationshipLabel>Surgical Note Implants</relationshipLabel>
        <relationshipName>Surgical_Note_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surgical_Notes_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surgical Notes Form</label>
        <referenceTo>Surgical_Notes_Form__c</referenceTo>
        <relationshipLabel>Surgical Note Implants</relationshipLabel>
        <relationshipName>Surgical_Note_Implants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Placement__c</fullName>
        <label>Unique Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Zygomaticus</fullName>
                </value>
                <value>
                    <fullName>Pterygoid</fullName>
                </value>
                <value>
                    <fullName>Vomer</fullName>
                </value>
                <value>
                    <fullName>Trans-sinus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Surgical Note Implant</label>
    <nameField>
        <label>Surgical Note Implant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgical Note Implants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>